--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,6 @@
 
 en:
   hello: "Hello world"
+  created: “%{name} was successfully created.”
+  updated: “%{name} was successfully updated”
+  destroyed: “%{name} was successfully destroyed”
